# crustacean_6502_emulator

./: Cargo.toml
src/: color.hex  error.rs  handler.rs  main.rs  ui.glade  ui.glade~
src/emulator/: addressing_modes.rs  components.rs  emulator.rs  error.rs  mod.rs  opcodes.rs  registers.rs  system.rs
src/graphic/: color.rs  mod.rs  palette.rs
src/sixty_five/: addr  cpu.rs  emulator.rs  error.rs  mod.rs  ops
