[package]
name = "crustacean_6502_emulator"
version = "0.1.0"
authors = ["PeronTheDuck <pedroignacioperezvargas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.8.0"
glib = "0.9.0"
gio = "*"
cairo-rs = "*"